@@ -3,6 +3,12 @@
 	* src/BaseThought.py:
 	* src/MMapArea.py:
 	* src/ImageThought.py:
+	Add a cursor change when resizing images, reflecting direction of change
+
+
+	* src/BaseThought.py:
+	* src/MMapArea.py:
+	* src/ImageThought.py:
 	Make loading and saving of image thoughts work.  Fingers crossed.
 	Should work.
 	Cleanup temp stuff from BaseThought
